# k8s-resource-advisor

./: CHANGELOG.md  Dockerfile  README.md  alertmanager-values.yaml  pyproject.toml
.github/workflows/: build.yml
k8s_advisor/: cli.py  client.py  models.py  report.py  slack.py
k8s_advisor/checks/: namespaces.py  pods.py  services.py
kubernetes-manifests/: app.yaml  cronjob.yaml  rbac.yaml  test-workloads.yaml
tests/: test_pods.py  test_slack.py
